# rocket_oauth2

./: Cargo.toml
examples/user_info_custom_provider/src/: main.rs
examples/user_info_custom_provider/src/oauth2/: github.rs
examples/user_info_hyper_rustls/: Cargo.toml
examples/user_info_hyper_rustls/src/: main.rs
src/: config.rs  hyper_rustls_adapter.rs  lib.rs
