[package]
name = "user_info_hyper_sync_rustls"
version = "0.0.0"
authors = ["jeb <jeb@jebrosen.com>"]
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
hyper = "0.13"
hyper-rustls = "=0.20.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "async", default-features = false, features = ["private-cookies"] }
rocket_oauth2 = { path = "../../", features = ["hyper_rustls_adapter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
